# cli-collect

./: .gitignore  Cargo.toml  README.md
src/: color_str.rs  lib.rs  table.rs  utils.rs
